# far2l

./: CMakeLists.txt  DUMPER.md  changelog.md
ImageViewer/configs/plug/: ImageViewer_en.hlf  ImageViewer_en.lng  ImageViewer_ru.hlf  ImageViewer_ru.lng
ImageViewer/src/: Common.h  Image.cpp  Image.h  ImageAtFull.cpp  ImageAtQV.cpp  ImageView.cpp  ImageView.h  Plugin.cpp  Settings.cpp  Settings.h  ToolExec.cpp  ToolExec.h  lng.h
OpenWith/: CMakeLists.txt
OpenWith/configs/: OpenWithEng.lng  OpenWithRus.lng  help_en.hlf  help_ru.hlf
OpenWith/src/: AppProvider.cpp  AppProvider.hpp  BSDAppProvider.cpp  BSDAppProvider.hpp  DummyAppProvider.cpp  DummyAppProvider.hpp  GIOBasedAppProvider.cpp  GIOBasedAppProvider.hpp  LaunchServicesBridge.mm  LinuxAppProvider.cpp  LinuxAppProvider.hpp  MacOSAppProvider.cpp  MacOSAppProvider.hpp  MacOSAppProvider.mm  OpenWith.cpp  OpenWith.hpp  XDGBasedAppProvider.cpp  XDGBasedAppProvider.hpp  common.hpp  lng.hpp
WinPort/src/sudo/: sudo_client_api.cpp
compare/: CMakeLists.txt
far2l/bootstrap/scripts/: FarRus.hlf.m4
far2l/src/: copy.cpp  execute_oscmd.cpp
utils/include/: debug.h
